--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,14 +18,14 @@ jobs:
       with:
         version: '>= 363.0.0'
         project_id: ${{ secrets.GOOGLE_PROJECT }}
-        service_account_key: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
+        service_account: ${{ secrets.credentials_json }}
         export_default_credentials: true
 
     - name: Authenticate to Google Cloud
       id: auth
       uses: google-github-actions/auth@v1
       with:
-          service_account_key: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
+          service_account: ${{ secrets.credentials_json }}
 
     - name: build and push the docker image
       env:
