--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -27,6 +27,19 @@ jobs:
         service_account: ${{ secrets.credentials_json }}
         export_default_credentials: true
 
+    # **Trivy Scan Step**
+      - name: Install Trivy
+        run: |
+          sudo apt-get update && sudo apt-get install -y wget
+          wget https://github.com/aquasecurity/trivy/releases/download/v0.41.0/trivy_0.41.0_Linux-64bit.deb
+          sudo dpkg -i trivy_0.41.0_Linux-64bit.deb
+
+      - name: Scan Docker Image with Trivy
+        env:
+          IMAGE_NAME: gcr.io/${{ secrets.GOOGLE_PROJECT }}/demo/nginx:latest
+        run: |
+          trivy image --exit-code 1 --severity CRITICAL, HIGH $IMAGE_NAME    
+
     - name: build and push the docker image
       env:
         GOOGLE_PROJECT: ${{ secrets.GOOGLE_PROJECT }}
