--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -36,9 +36,9 @@ jobs:
 
     - name: Scan Docker Image with Trivy
       env:
-          IMAGE_NAME: us-central1-docker.pkg.dev/absolute-bloom-439721-q7/demo/nginx:latest
+          IMAGE_NAME: gcr.io/${{ secrets.GOOGLE_PROJECT }}/demo/nginx:latest
       run: |
-          trivy image --exit-code 1 --severity CRITICAL,HIGH us-central1-docker.pkg.dev/absolute-bloom-439721-q7/demo/nginx:latest    
+          trivy image --exit-code 1 --severity CRITICAL,HIGH gcr.io/${{ secrets.GOOGLE_PROJECT }}/demo/nginx:latest    
 
     - name: build and push the docker image
       env:
