--- a/.github/workflows/build&deploy.yaml
+++ b/.github/workflows/build&deploy.yaml
@@ -27,6 +27,10 @@ jobs:
         service_account: ${{ secrets.credentials_json }}
         export_default_credentials: true
 
+    - name: install gke-gcloud-auth-plugin
+      run: |
+          sudo apt-get update && sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin    
+
     - name: build and push the docker image
       env:
         GOOGLE_PROJECT: ${{ secrets.GOOGLE_PROJECT }}
