--- a/.github/workflows/build&deploy.yaml
+++ b/.github/workflows/build&deploy.yaml
@@ -29,7 +29,7 @@ jobs:
 
     - name: install gke-gcloud-auth-plugin
       run: |
-          sudo apt-get update && sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin    
+          gcloud components install gke-gcloud-auth-plugin -q    
 
     - name: build and push the docker image
       env:
